styled nav, scrollbar fixed, and layout width set

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,13 +1,14 @@
 .active {
-    color: rgb(37, 37, 172);
+    color: rgb(191, 123, 0);
 }
 
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     position: sticky;
     top: 0;
+    margin-top: 1rem
 }
 
 nav .title {
@@ -33,10 +34,15 @@ nav ul li a {
     padding: 0.5rem;
     margin: 0 2rem;
     border-radius: 0.5rem;
+    transition: color 0.3s ease;
+    font-weight: 300;
+    font-family: 'Nunito', sans-serif;
+
 }
 
 nav ul li a:not(.active):hover {
-    color:rgb(150, 27, 62)
+    color:rgb(221, 147, 11);
+    transition: color 0.3s ease;
 }
 
 nav .menu {
